changed port for frontend docker image

--- a/expense-tracker-frontend/Dockerfile
+++ b/expense-tracker-frontend/Dockerfile
@@ -1,10 +1,14 @@
-# Build stage
-FROM node:18 as build
+# Stage 1: Build React app
+FROM node:20 AS build
 WORKDIR /app
 COPY . .
 RUN npm install
 RUN npm run build
 
-# CORS fix (optional: if needed, modify nginx conf)
-EXPOSE 3000
-CMD ["npm", "start"]
+# Stage 2: Serve with static file server on port 80
+FROM node:20
+RUN npm install -g serve
+WORKDIR /app
+COPY --from=build /app/build ./build
+EXPOSE 80
+CMD ["serve", "-s", "build", "-l", "80"]
